# Telegram-Adds-ToolBox

./: .gitignore  Dockerfile  README.md  bot.py  docker-compose.yaml  manage.py  pyproject.toml
migrations/models/: 0_20250328163658_init.py  1_20250329154406_add photo date.py  2_20250329231412_add_user_registration.py  3_20250330130126_add_table_for_access_bot.py
sessions/: 1
src/telegram_add_tool/activity_checker/: app.py
src/telegram_add_tool/backend/: app.py
src/telegram_add_tool/backend/src/apps/: __init__.py
src/telegram_add_tool/backend/src/apps/user/: metrics.py  models.py  schemas.py
src/telegram_add_tool/backend/src/apps/user/api/: __init__.py  user.py
src/telegram_add_tool/backend/src/core/: abstract_orm_model.py  database.py  enums.py  lifespan.py  logger.py  middleware.py  setting.py
src/telegram_add_tool/bot/: adapter.py  bot.py  config.py
src/telegram_add_tool/user_avatar_date_module/: app.py
src/telegram_add_tool/user_created_account/: app.py
